@@ -143,4 +143,8 @@ ERROR:  POSTGIS2GEOS conversion failed
 141|SRID=4;MULTILINESTRING((2 2,3 3))
 142|SRID=5;MULTILINESTRING((2 2,3 3))
 143|SRID=6;MULTIPOLYGON(((0 0,1 0,1 1,0 1,0 0)))
+144|POINTM(1 2 0)
+145|POINT(1 2 0)
+146|POINT(1 2 0 3)
+147|POINT(1 2 3 0)
 144|LINESTRING(-5 -5,0 0,1 1,4 4)
